# gazebo_ir_camera_plugin

./: CMakeLists.txt  package.xml
include/gazebo_ros_ir_camera_plugin/: gazebo_ros_ir_camera_sensor.h  gazebo_ros_ir_emitter_model.h
msg/: IRCamera.msg
src/: gazebo_ros_ir_camera_sensor.cpp  gazebo_ros_ir_emitter_model.cpp
